# bulletin_builder

./: .gitignore  .pre-commit-config.yaml  BASELINE_CHECKLIST.md  CODEOWNERS  CONTRIBUTING.md  CORE_FEATURES.md  LICENSE  PR_NOTES.md  PowerSearch.ps1  README.md  RELEASE_NOTES.md  SCOPE_AND_RULES.md  bulletin_builder.spec  cleaned_sorted_events.json  cleanup-bulletin-builder.ps1  cleanup_bulletin_builder.sh  codex_task.json  codex_task_frontsteps.json  config.backup_20251010_110054.ini  config.ini  config1.ini  debug_app.py  events.json  filename.txt  generate_exports.py  list_structure.py  main.py  process_events.py  project_structure.txt  pyproject.toml  repo-scan.ps1  requirements.txt  roadmap.json  secret-replace.txt  settings.py  structure_file.txt  test_imports.py  test_run.py  test_theme_modes.py  tmp_build_full_bulletin.py  (+13 more)
.githooks/: pre-commit  pre-commit.ps1
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
app_core/: core_init.py  drafts.py  exporter.py  handlers.py  loader.py  sections.py  ui_setup.py
components/: BOD.json  Committee Meeting This Week.json  Disclaimer Meetings.json  Email Header.json  EmailHeaderIMG.json
docs/: BUG_FIXES_2025-10-10.md  BUILDING.md  CONFIG.md  DETAILED_DOCS.md  DEVELOPER_SETUP.md  EXCEPTION_HANDLING_GUIDE.md  INSTALLERS.md  LOGGING_GUIDE.md  TROUBLESHOOTING.md  TYPE_HINTS_GUIDE.md  USER_MANUAL.md  auto-backup-system.md
exports/: _hook_test.html
packaging/: bulletin_builder.iss  bulletin_builder.spec
repo-mirror.git/: packed-refs
reports/: _summary.json  git.json  mypy.txt  py-licenses.json  pytest.txt  (+1 more)
(+235 files in other folders)
